# sps_genai

./: .gitignore  cnn_architecture.py  main.py  pyproject.toml  train_classifier.py
app/: bigram_model.py  embedding_model.py
helper_lib/: checkpoints.py  data_loader.py  evaluator.py  generator.py  model.py  trainer.py  utils.py
